--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
     --cor-destaque: #2BDEFD;
     --cor-texto: #FFFFFF;
 }
+
+body{
+ background-color: var(--cor-fundo);
+ color: var(--cor-texto);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ min-height: 100vh;
+}
